--- a/Gestion Taller.csproj
+++ b/Gestion Taller.csproj
@@ -82,6 +82,7 @@
       <DependentUpon>AdminTeacherEditWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="DBConnection.cs" />
+    <Compile Include="Teacher.cs" />
     <Compile Include="TeacherHomeWindow.xaml.cs">
       <DependentUpon>TeacherHomeWindow.xaml</DependentUpon>
     </Compile>
